<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/tvStatus"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/loading"
      />
  <LinearLayout
      android:background="@color/chrome_grey"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:id="@+id/layoutInfo"
      android:visibility="visible"
      >
    <Spinner
        android:id="@+id/spinnerPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Place"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="@dimen/material_margin_large"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/material_margin_large"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/mode_transport"
          android:textStyle="bold"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tvModeCar"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:gravity="center"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tvModeTrain"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:gravity="center"
          />
    </LinearLayout>
    <Button
        android:text="@string/btnNavigate"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/btnNavigate"
        android:layout_gravity="center"
        style="@style/AppTheme.Button"
        />
  </LinearLayout>

</FrameLayout>