<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.home.MainActivity"
    >

  <net.yanzm.mth.MaterialTabHost
      android:id="@android:id/tabhost"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:colorTabIndicator="@color/red"
      />

  <android.support.v4.view.ViewPager
      android:id="@+id/pager"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

</LinearLayout>
